# openxcap

./: .boring  BUGS  ChangeLog  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README  README.md  TODO  alembic.ini  config.ini.sample  openxcap  openxcap.wpr  pyproject.toml  requirements.txt  setup.py  tox.ini
boot/: openxcap.debian
client/: .xcapclient.sample  README  alice.xml  bill_display_name_fixed.xml  pres-rules.xml  resource-lists.xml  xcapclient.py  xcapclientapp.py
debian/: changelog  control  copyright  docs  lintian-overrides  logrotate  openxcap.default  openxcap.dirs  openxcap.docs  openxcap.init  openxcap.install  openxcap.postinst  openxcap.postrm  openxcap.service  rules
migrations/: env.py
openser/: openser.cfg  opensips.cfg  pua_hash_h_patch.diff
scripts/: add-openxcap-user.py  mysql-create-tables.sql  mysql-create-user.sql  mysql-create.sql
test/: __init__.py  common.py  disabled_test_subscribediff.py  test.py  test_attribute.py  test_auth.py  test_document.py  test_element.py  test_element_put.py  test_errors.py  test_etags.py  test_etags2.py  test_fragment.py  test_global.py  test_nsbindings.py  test_pidf.py  test_presrules.py  test_resourcelists.py  test_rlsservices.py  test_watchers.py  test_xcap_caps.py  test_xpath.py  xcapclientwrap.py
tls/: README
xcap/: __init__.py  applications.py  authentication.py  config.py  datatypes.py  dbutil.py  element.py  errors.py  http_utils.py  log.py  logutil.py  resource.py  root_uris.py  server.py  tls.py  tweaks.py  types.py  uri.py  xcapdiff.py  xpath.py
xml-schemas/: pidf.xsd  rls-services.xsd
(+138 files in other folders)
